Added : GetAllBooks and view the particular book details

--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -11,10 +11,10 @@
     </mat-card>
 
     <mat-card class="mat2">
-        <div fxLayout="row">
+        <div fxLayout="row wrap">
             <div class="login">
                 <P>LOGIN</P>
-            </div>
+           </div>
             <div class="signup" routerLink="/signUp">
                 <p>SIGNUP</p>
             </div>
