--- a/src/app/Components/quickview/quickview.component.scss
+++ b/src/app/Components/quickview/quickview.component.scss
@@ -62,9 +62,9 @@
     background-color: brown;
     color: white;
     border: aliceblue;
-    padding: 13px;
-    margin-top: 8%;
-    width: 34%;
+    padding: 6px;
+    margin-top: 7%;
+    width: 43%;
     margin-left: 1%;
     cursor: pointer;
 }
@@ -72,10 +72,11 @@
 .btn2 {
     background-color: black;
     color: white;
-    padding: 5px;
-    margin-top: -20%;
-    width: 38%;
-    margin-left: 42%;
+    border: aliceblue;
+    padding: 1px;
+    margin-top: -10%;
+    width: 45%;
+    margin-left: 55%;
     cursor: pointer;
 }
 
