--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -13,7 +13,8 @@
     <mat-card class="mat2">
         <div fxLayout="row wrap">
             <div class="login">
-                <P>LOGIN</P>
+                <u>LOGIN</u>
+                
            </div>
             <div class="signup" routerLink="/signUp">
                 <p>SIGNUP</p>
