--- a/src/app/Components/sign-up/sign-up.component.html
+++ b/src/app/Components/sign-up/sign-up.component.html
@@ -16,7 +16,7 @@
                 <P>LOGIN</P>
             </div>
             <div class="signup">
-                <p>SIGNUP</p>
+                <u>SIGNUP</u>
             </div>
         </div>
 
