--- a/src/app/Components/getcart/getcart.component.scss
+++ b/src/app/Components/getcart/getcart.component.scss
@@ -8,7 +8,7 @@
 .cartbook {
 
     width: 160%;
-    margin-left: -46%;
+   margin-left: -21%;
 
 
 }
@@ -138,9 +138,10 @@
 }
 
 .button {
+   
     width: 150px;
     left: 127px;
-    margin-left: 100px;
+    margin-left: 200px;
 }
 
 .mat-expansion-panel {
@@ -160,3 +161,106 @@
     // height: %;
     margin: 2% 109px;
 }
+
+//ADDRESS DETAILS
+
+.customerdetails {
+    margin-bottom: 2%;
+    width: 750px;
+    height: 530px;
+
+}
+
+
+.details {
+
+    margin-bottom: 20px;
+    margin-left: 28px;
+
+}
+
+.heading {
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: -28px;
+
+}
+
+.names {
+    font-size: 15px;
+    font-weight: 500;
+
+}
+
+.address1 {
+    position: relative;
+    left: 20px;
+}
+
+
+.type {
+    margin-left: 30px;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.home {
+    margin-left: 30px;
+
+}
+
+.work {
+    margin-left: 100px;
+
+}
+
+.other {
+    margin-left: 100px;
+
+}
+
+.address {
+    border: 1px solid darkred;
+    color: darkred;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 40px;
+    width: 180px;
+    position: relative;
+    left: 100px;
+}
+
+.continuebutton {
+    width: 150px;
+    margin-left: 15px;
+    position: relative;
+    top: 170px;
+    left: 95px;
+}
+
+.addressandcontinue {
+
+    position: relative;
+    bottom: 420px;
+    left: 310px;
+}
+
+
+.checkoutbutton {
+    background-origin: 1px solid green;
+    width: 150px;
+    position: relative;
+    left: 130px;
+    top: 200px;
+    margin-left: 50px;
+} 
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: rgb(17, 16, 16);
+    border-radius: 50%;
+    display: inline-block;
+  }
