--- a/src/app/Components/get-all-book/get-all-book.component.scss
+++ b/src/app/Components/get-all-book/get-all-book.component.scss
@@ -147,3 +147,13 @@
     width: 55%;
 
 }
+.text-center my-pagination {
+
+    background-color: rgb(232 57 33);
+    color: #fefefe;
+    cursor: default;
+}
+// .pagination {
+//   //  margin-left: 25;
+//   //  margin-bottom: 1rem;
+// }
