--- a/src/app/Components/getcart/getcart.component.scss
+++ b/src/app/Components/getcart/getcart.component.scss
@@ -1,3 +1,11 @@
+.panel1{
+    margin-top: -9%;
+    margin-bottom: 2%;
+}
+.panel2{
+   // margin-top: -9%;
+    margin-bottom: 2%;
+}
 .section {
     margin-bottom: 2%;
     width: 750px;
@@ -158,8 +166,8 @@
 }
 
 .main {
-    // height: %;
-    margin: 2% 109px;
+    margin-top: 50px;
+   margin : 2% 170px;
 }
 
 //ADDRESS DETAILS
