--- a/src/app/Components/orderplaced/orderplaced.component.html
+++ b/src/app/Components/orderplaced/orderplaced.component.html
@@ -6,7 +6,8 @@
 
         <div class="para">
             <p style="text-align: center;font: normal normal normal 18px/22px Lato;color: #333232;opacity: 1;">
-                hurray!!! your order is confirmed<br> the order id is #123456 save the order id for<br> further
+                hurray!!! your order is confirmed<br> the order id is <u>#{{OrderId}}</u> save the order id for<br>
+                further
                 communication..
             </p>
         </div>
@@ -37,7 +38,7 @@
 
 
         <div>
-            <button class="continueshopping" style="color: white;">Continue Shopping</button>
+            <button class="continueshopping" style="color: white;" routerLink="/dashboard/getallbook">Continue Shopping</button>
         </div>
         <!-- </div> -->
     </div>
