--- a/src/app/Components/quickview/quickview.component.html
+++ b/src/app/Components/quickview/quickview.component.html
@@ -1,7 +1,7 @@
-<div class="mainheader" fxLayout="column">
+<div class="mainheader"fxLayout="column" fxLayoutAlign="center center">
     <div style="width: 80%;">
         <div style="width: 100%; margin-top: 2%;">
-            <span style="color:gray;">Home/</span><span> Books({{book?.quantity}}) </span>
+            <span style="color:gray;" routerLink="/dashboard/getallbook">Home/</span><span> Books({{book?.quantity}}) </span>
         </div>
         <div class="header">
             <div class="Books">
