--- a/src/app/Components/get-all-book/get-all-book.component.scss
+++ b/src/app/Components/get-all-book/get-all-book.component.scss
@@ -9,7 +9,6 @@
     font-size: medium;
     color: gainsboro;
 }
-
 .books {
     font-size: 25px;
 }
@@ -37,7 +36,7 @@
 
     display: flex;
     flex-wrap: wrap;
-    margin-left: 2%
+    margin-left: 8%
 }
 
 .entirebook {
@@ -147,12 +146,11 @@
     width: 55%;
 
 }
-.text-center my-pagination {
-
-    background-color: rgb(232 57 33);
-    color: #fefefe;
-    cursor: default;
-}
+// .my-pagination 
+// deep .
+ngx-pagination .current {
+    background: red;
+  }
 // .pagination {
 //   //  margin-left: 25;
 //   //  margin-bottom: 1rem;
